--- a/dropzone/less/dropzone.less
+++ b/dropzone/less/dropzone.less
@@ -117,6 +117,10 @@
       z-index: -1;
     }
 
+    .dropzone .dz-preview.dz-file-preview .dz-image {
+      display: none;
+    }
+
     .dz-preview.dz-image-preview .dz-image img {
       max-width: 60px;
     }
