--- a/stock-g/less/stock-g.less
+++ b/stock-g/less/stock-g.less
@@ -104,9 +104,23 @@
     stroke-dasharray: 5, 5;
   }
 
-  .analysis path, .analysis circle {
+  .supstances.analysis path, .analysis circle {
     stroke: blue;
     stroke-width: 0.8;
+  }
+
+  .supstances.analysis .axisannotation path {
+    fill: blue;
+  }
+
+  .supstances.analysis .axisannotation text {
+    fill: #ffffff;
+  }
+
+  .vline.analysis path {
+    stroke: #F1B900;
+    stroke-width: 0.8;
+    stroke-dasharray: 5, 5;
   }
 
   .trendline circle {
