Button cancel was useless, so instead now its reset, and the cancel operation works clicking the same button

--- a/stock-g/css/stock-g.css
+++ b/stock-g/css/stock-g.css
@@ -213,7 +213,7 @@
 .stock-panel .buttons .trade {
   background-position: -52px 0px;
 }
-.stock-panel .buttons .cancel {
+.stock-panel .buttons .reset {
   background-position: -78px 0px;
 }
 .stock-panel .buttons .clear {
