--- a/lightbox/css/lightbox.css
+++ b/lightbox/css/lightbox.css
@@ -1,10 +1,13 @@
-/* line 7, ../sass/lightbox.sass */
+/* Preload images */
 body:after {
-  content: url(../img/close.png) url(../img/loading.gif) url(../img/prev.png) url(../img/next.png);
+  content: url(../images/close.png) url(../images/loading.gif) url(../images/prev.png) url(../images/next.png);
   display: none;
 }
 
-/* line 11, ../sass/lightbox.sass */
+body.lb-disable-scrolling {
+  overflow: hidden;
+}
+
 .lightboxOverlay {
   position: absolute;
   top: 0;
@@ -16,7 +19,6 @@ body:after {
   display: none;
 }
 
-/* line 20, ../sass/lightbox.sass */
 .lightbox {
   position: absolute;
   left: 0;
@@ -26,26 +28,18 @@ body:after {
   line-height: 0;
   font-weight: normal;
 }
-/* line 28, ../sass/lightbox.sass */
+
 .lightbox .lb-image {
   display: block;
   height: auto;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
+  max-width: inherit;
   border-radius: 3px;
 }
-/* line 32, ../sass/lightbox.sass */
+
 .lightbox a img {
   border: none;
 }
 
-.lightbox img {
-  max-width: inherit !important;
-}
-
-/* line 35, ../sass/lightbox.sass */
 .lb-outerContainer {
   position: relative;
   background-color: white;
@@ -53,45 +47,37 @@ body:after {
   width: 250px;
   height: 250px;
   margin: 0 auto;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px;
   border-radius: 4px;
 }
-/* line 38, ../../../../.rvm/gems/ruby-1.9.3-p392/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+
 .lb-outerContainer:after {
   content: "";
   display: table;
   clear: both;
 }
 
-/* line 44, ../sass/lightbox.sass */
 .lb-container {
   padding: 4px;
 }
 
-/* line 47, ../sass/lightbox.sass */
 .lb-loader {
   position: absolute;
   top: 43%;
-  left: 0%;
+  left: 0;
   height: 25%;
   width: 100%;
   text-align: center;
   line-height: 0;
 }
 
-/* line 56, ../sass/lightbox.sass */
 .lb-cancel {
   display: block;
   width: 32px;
   height: 32px;
   margin: 0 auto;
-  background: url(../img/loading.gif) no-repeat;
+  background: url(../images/loading.gif) no-repeat;
 }
 
-/* line 63, ../sass/lightbox.sass */
 .lb-nav {
   position: absolute;
   top: 0;
@@ -101,49 +87,57 @@ body:after {
   z-index: 10;
 }
 
-/* line 71, ../sass/lightbox.sass */
 .lb-container > .nav {
   left: 0;
 }
 
-/* line 74, ../sass/lightbox.sass */
 .lb-nav a {
   outline: none;
+  background-image: url('data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==');
 }
 
-/* line 77, ../sass/lightbox.sass */
 .lb-prev, .lb-next {
-  width: 49%;
   height: 100%;
   cursor: pointer;
-  /* Trick IE into showing hover */
   display: block;
-  transition: linear 0 all;
-  -webkit-transition: linear 0 all;
-  -moz-transition: linear 0 all;
 }
 
-/* line 84, ../sass/lightbox.sass */
-.lb-prev {
+.lb-nav a.lb-prev {
+  width: 34%;
   left: 0;
   float: left;
-}
-/* line 87, ../sass/lightbox.sass */
-.lb-prev:hover {
-  background: url(../img/prev.png) left 48% no-repeat;
+  background: url(../images/prev.png) left 48% no-repeat;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  -webkit-transition: opacity 0.6s;
+  -moz-transition: opacity 0.6s;
+  -o-transition: opacity 0.6s;
+  transition: opacity 0.6s;
 }
 
-/* line 90, ../sass/lightbox.sass */
-.lb-next {
+.lb-nav a.lb-prev:hover {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1;
+}
+
+.lb-nav a.lb-next {
+  width: 64%;
   right: 0;
   float: right;
-}
-/* line 93, ../sass/lightbox.sass */
-.lb-next:hover {
-  background: url(../img/next.png) right 48% no-repeat;
+  background: url(../images/next.png) right 48% no-repeat;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  -webkit-transition: opacity 0.6s;
+  -moz-transition: opacity 0.6s;
+  -o-transition: opacity 0.6s;
+  transition: opacity 0.6s;
 }
 
-/* line 96, ../sass/lightbox.sass */
+.lb-nav a.lb-next:hover {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1;
+}
+
 .lb-dataContainer {
   margin: 0 auto;
   padding-top: 5px;
@@ -156,32 +150,31 @@ body:after {
   -webkit-border-bottom-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
-/* line 38, ../../../../.rvm/gems/ruby-1.9.3-p392/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+
 .lb-dataContainer:after {
   content: "";
   display: table;
   clear: both;
 }
 
-/* line 103, ../sass/lightbox.sass */
 .lb-data {
   padding: 0 4px;
-  color: #bbbbbb;
+  color: #ccc;
 }
-/* line 106, ../sass/lightbox.sass */
+
 .lb-data .lb-details {
   width: 85%;
   float: left;
   text-align: left;
   line-height: 1.1em;
 }
-/* line 111, ../sass/lightbox.sass */
+
 .lb-data .lb-caption {
   font-size: 13px;
   font-weight: bold;
   line-height: 1em;
 }
-/* line 115, ../sass/lightbox.sass */
+
 .lb-data .lb-number {
   display: block;
   clear: left;
@@ -189,19 +182,23 @@ body:after {
   font-size: 12px;
   color: #999999;
 }
-/* line 121, ../sass/lightbox.sass */
+
 .lb-data .lb-close {
   display: block;
   float: right;
   width: 30px;
   height: 30px;
-  background: url(../img/close.png) top right no-repeat;
+  background: url(../images/close.png) top right no-repeat;
   text-align: right;
   outline: none;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
   opacity: 0.7;
+  -webkit-transition: opacity 0.2s;
+  -moz-transition: opacity 0.2s;
+  -o-transition: opacity 0.2s;
+  transition: opacity 0.2s;
 }
-/* line 130, ../sass/lightbox.sass */
+
 .lb-data .lb-close:hover {
   cursor: pointer;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
